# bit-hackathon-gruppe-21-Siedlungsqualitaet-im-Profil

./: .env.example  .gitignore  CLAUDE.md  INDICATORS.md  README.md  TECHNICAL_GUIDE.md  package-lock.json  pyproject.toml
.github/workflows/: docker-build-push.yml
data-pipelines/: README.md  accessibility-pt-rasterize.py  analyze_settlement_profiles.py  are_metrics_registry.py  are_rasterize_lib.py  coarsen_settlement_layers.py  density-rasterize.py  emit_settlement_meta.py  geo_geocodes.py  leerwohnungsziffer.py  leerwohnungsziffer_cache.json  meteo-fetch.py  meteo-scheduler.py  metric_layer_meta.py  population-density-rasterize.ipynb  pt-quality-rasterize.py  rasterize-are-metrics.py  requirements.txt  run-all-pipelines.py  settlement_layer_meta.py  settlement_quality_scoring.py  test_coarsen_settlement_layers.py  test_density_rasterize.py  test_settlement_quality_scoring.py  test_tlm_green_trees_rasterize.py  tlm-green-trees-rasterize.py  tlm_green_trees_config.py  tlm_green_trees_download.py  tlm_green_trees_rasterize.py  tranquillity-rasterize.py  validate_swiss_grid.py  visualize-zarr.py  zarr_b2_upload.py
data-pipelines/output/: city_factor_profiles.json
docs/: PRESET_STATISTICS.md
frontend/: Dockerfile  README.md  angular.json  bun.lockb  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/e2e/: map-zarr-overlay.spec.ts  population-density-zurich.spec.ts  tinder-mode.spec.ts  weather-layers.spec.ts
frontend/patches/: @carbonplan+zarr-layer+0.5.0.patch  @carbonplan__zarr-layer.patch
frontend/public/i18n/: de.json  en.json  fr.json  it.json
frontend/src/: index.html  styles.scss
(+87 files in other folders)
