[project]
name = "bit-hackathon-gruppe-21-siedlungsqualitaet-im-profil"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "geocube>=0.7.1",
    "geopandas>=1.1.3",
    "leafmap>=0.62.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.22.0",
    "streamlit>=1.57.0",
    "xarray>=2026.4.0",
    "zarr>=3.2.1",
]
